homepage image issue on safari mobile

--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -1,6 +1,6 @@
 .header {
   position: fixed;
-  z-index: 1;
+  z-index: 3;
   top: 0;
   left: 0;
   width: 100vw;
@@ -34,6 +34,7 @@
       }    
     }
     nav {
+      z-index: 4;
       ul.navul {
         display: flex;
         align-items: center;
